syntax = "proto3";

option csharp_namespace = "Art.Framework.ApiNetwork.Grpc.Api.Deck";

package apb.api.deck;

service DeckService {
	rpc UpdateName (UpdateNameRequest) returns (UpdateNameResponse);
	rpc ReplaceDeck (ReplaceDeckRequest) returns (ReplaceDeckResponse);
	//rpc CopyDeck (CopyDeckRequest) returns (CopyDeckResponse);
	//rpc RemoveDeck (RemoveDeckRequest) returns (RemoveDeckResponse);
}

message UpdateNameRequest {
	int32 deckType = 1;
	int32 userDeckNumber = 2;
	string name = 3;
}

message UpdateNameResponse {
	map<string, DiffData> diffUserData = 99;
}

message ReplaceDeckRequest {
	int32 deckType = 1;
	int32 userDeckNumber = 2;
	Deck deck = 3;
}

message ReplaceDeckResponse {
	map<string, DiffData> diffUserData = 99;
}

message Deck {
	DeckCharacter character01 = 1;
	DeckCharacter character02 = 2;
	DeckCharacter character03 = 3;
}

message DeckCharacter {
	string userCostumeUuid = 1;
	string mainUserWeaponUuid = 2;
	repeated string subUserWeaponUuid = 3;
	string userCompanionUuid = 4;
	repeated string userPartsUuid = 5;
	int32 userDressupId = 6;
	string userThoughtUuid = 7;
}

message DiffData {
	string updateRecordsJson = 1;
	string deleteKeysJson = 2;
}
